...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <GridView
        android:id="@+id/gridView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e5e5e5"
        android:clickable="true"
        android:columnWidth="100dp"
        android:drawSelectorOnTop="true"
...
